# JEB-Su23-SHREC

./: Belback-SHREC-SURG-2023.pptx  README.md  cbuild.sh  cfsbd.sh  chmod.sh  click.py  fpbd.sh  massinit2.sh  massinit3.sh  massinit4.sh  massinit5.sh  massinit6.sh  rep.sh  run.py  run_inits.py  run_inits2.py  selt1.py  selt2.py  selt3.py  share.sh
HelloWorld/: HelloWorld.cpp  HelloWorld.fpp  HelloWorld.hpp
HelloWorld/docs/: sdd.md
algos/: C_MAIN (copy).c  C_MAIN.c  GHmazec  GHsortc  MEcuda.c  MEcuda_c  MEmaze.c  MEmazec  MEopenmp.c  MEopenmp_c  MEpuzzle.c  MEpuzzlec  MEsort.c  MEsortc  intermed.txt  intermed2.txt  mainc  wait.c  waitc
algos/GHmaze/: ParallelMazeSolver.exp  ParallelMazeSolver.lib  ParallelMazeSolver.sln  ParallelMazeSolver.vcxproj  README.md  kernel.cu  main.h
algos/MEcuda/: 0cuda_HiWor.cu  1cuda_matrix.cu  MEcuda0
algos/MEopenmp/: 0openMP_HiWor.c  1openMP_forNW.c  2openMP_forNWB.c  3openMP_Sched.c  4openMP_atomic.c  5openMP_Thrdpriv.c  6openMP_flush.c  7openMP_nested.c  openMP0  openMP1  openMP2  openMP3  openMP4  openMP5  openMP6  openMP7
algos/MEpuzzle/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  frontier_queue.hpp  frontier_queue.tpp  test-frontier-queue  test-solver  test_frontier_queue.cpp  test_solver.cpp
algos/MEsort/: CMakeCache.txt  CTestTestfile.cmake  (+10 more)
my_app/: CMakeLists.txt
my_app/fsw/mission_inc/: my_app_perfids.h
my_app/fsw/platform_inc/: my_app_msgids.h  my_app_table.h
my_app/fsw/src/: my_app.c  my_app.h  my_app_events.h  my_app_msg.h  my_app_version.h
my_app/fsw/tables/: my_app_tbl.c
(+14 files in other folders)
